--- a/www/base/src/app/index.jade
+++ b/www/base/src/app/index.jade
@@ -1,8 +1,37 @@
-extends layout.jade
-block content
-    gl-page-with-sidebar
-        gl-topbar
-            gl-topbar-contextual-actions
-            loginbar
-        connectionstatus
-        ui-view
+doctype html
+html.no-js(ng-app="app", xmlns:ng='http://angularjs.org', xmlns:app='ignored')
+    head
+        meta(charset='utf-8')
+        meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
+    title(window-title) Buildbot
+    meta(name='description', content='Buildbot web UI')
+    meta(name='viewport', content='initial-scale=1, minimum-scale=1, user-scalable=no, maximum-scale=1, width=device-width')
+    link(href='styles.css', rel='stylesheet')
+    link(id='bbicon', href='img/icon.png', rel='icon')
+    link(href='img/icon.svg', title="Buildbot", rel='fluid-icon')
+
+    body(ng-cloak)
+        gl-page-with-sidebar
+            gl-topbar
+                gl-topbar-contextual-actions
+                loginbar
+            connectionstatus
+            ui-view
+
+    script(src="scripts.js?_" + (new Date()).getTime())
+    | {% for app in config.plugins -%}
+    script(src="{{app}}/scripts.js")
+    link(href='{{app}}/styles.css', rel='stylesheet')
+    script
+      | angular.module('app').requires.push('{{app}}')
+    | {% endfor %}
+    script
+      | angular.module("buildbot_config", []).constant("config", {{configjson|safe}})
+    | {% if custom_templates %}
+    script
+      | angular.module("app").run(function ($templateCache) {
+      | {% for name, html in custom_templates.items() %}
+      |  $templateCache.put("{{ name }}", {{ html|safe }});
+      | {% endfor %}
+      | })
+    | {% endif %}
