--- a/www/base/src/guanlecoja-ui/topbar/topbar.tpl.jade
+++ b/www/base/src/guanlecoja-ui/topbar/topbar.tpl.jade
@@ -11,7 +11,7 @@ nav.navbar.navbar-default
             ol.breadcrumb
                 li(ng-repeat="b in breadcrumb")
                     a(ng-if="b.sref", ui-sref="{{b.sref}}") {{b.caption}}
-                    a(ng-if="b.href", ng-href="{{b.href}}") {{b.caption}}
-                    span(ng-if="b.href == undefined && b.sref == undefined", ng-href="{{b.href}}") {{b.caption}}
-        .navbar-collapse.collapse.pull-right(ng-class='{"in": !collapse}')
+                    a(ng-href="{{b.href}}", ng-if="b.href") {{b.caption}}
+                    span(ng-href="{{b.href}}", ng-if="b.href == undefined && b.sref == undefined") {{b.caption}}
+        .navbar-collapse.collapse.pull-right(ng-class="{'in': !collapse}")
             ul.nav.navbar-nav(ng-transclude)
