--- a/www/base/src/app/common/directives/forcefields/listfield.tpl.jade
+++ b/www/base/src/app/common/directives/forcefields/listfield.tpl.jade
@@ -4,3 +4,4 @@ basefield
     .col-sm-10
         select.form-control(ng-model="field.value", ng-if="!field.multiple", ng-options="v for v in field.choices")
         select.form-control(ng-model="field.value", multiple, ng-multiple="true", ng-if="field.multiple", ng-options="v for v in field.choices")
+        input.select-editable.form-control(ng-if="!field.strict && !field.multiple", type='text', ng-model="field.value")
