--- a/www/badges/buildbot_badges/templates/flat.svg.j2
+++ b/www/badges/buildbot_badges/templates/flat.svg.j2
@@ -10,7 +10,7 @@
   <g fill="#fff" text-anchor="middle" font-family="{{config.font_face}},Verdana,Geneva,sans-serif" font-size="{{config.font_size}}">
     <text x="{{ left.width/2+1 }}" y="15" fill="#010101" fill-opacity=".3">{{ left.text }}</text>
     <text x="{{ left.width/2+1 }}" y="14">{{ left.text }}</text>
-    <text x="{{ left.width+right.width/2-1 }}" y="15" fill="#010101" fill-opacity=".3">{{ right.text }}</text>
-    <text x="{{ left.width+right.width/2-1 }}" y="14">{{ right.text }}</text>
+    <text x="{{ right.width/2+left.width-1 }}" y="15" fill="#010101" fill-opacity=".3">{{ right.text }}</text>
+    <text x="{{ right.width/2+left.width-1 }}" y="14">{{ right.text }}</text>
   </g>
 </svg>
