--- a/www/badges/buildbot_badges/templates/plastic.svg.j2
+++ b/www/badges/buildbot_badges/templates/plastic.svg.j2
@@ -12,7 +12,7 @@
   <g fill="#fff" text-anchor="middle" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="11">
     <text x="{{ left.width/2+1 }}" y="14" fill="#010101" fill-opacity=".3">{{ left.text }}</text>
     <text x="{{ left.width/2+1 }}" y="13">{{ left.text }}</text>
-    <text x="{{ left.width+right.width/2-1 }}" y="14" fill="#010101" fill-opacity=".3">{{ right.text }}</text>
-    <text x="{{ left.width+right.width/2-1 }}" y="13">{{ right.text }}</text>
+    <text x="{{ right.width/2+left.width-1 }}" y="14" fill="#010101" fill-opacity=".3">{{ right.text }}</text>
+    <text x="{{ right.width/2+left.width-1 }}" y="13">{{ right.text }}</text>
   </g>
 </svg>
