www: Fix buildrequest number badge in builder page

--- a/www/base/src/app/builders/builder/builder.tpl.jade
+++ b/www/base/src/app/builders/builder/builder.tpl.jade
@@ -15,9 +15,7 @@
       tr(ng-repeat='br in buildrequests | orderBy:"-submitted_at"', ng-if="br.claimed==false" )
           td
             a(ui-sref="buildrequest({buildrequest:br.buildrequestid})")
-              span.badge-status(ng-class="results2class(br, 'pulse')")
-                  .badge-inactive {{br.buildrequestid}}
-                  .badge-active {{results2text(br)}}
+              span.badge-status {{br.buildrequestid}}
           td
             span(title="{{br.submitted_at | dateformat:'LLL'}}")
               | {{br.submitted_at | timeago }}
