display build times with d3
looks useful to display the evolution of build times over time
This commit creates a simple directive which display a lineplot with d3.js

--- a/www/base/src/app/builders/builder/builder.tpl.jade
+++ b/www/base/src/app/builders/builder/builder.tpl.jade
@@ -3,6 +3,9 @@
     h4 Description:
     | {{ builder.description }}
   .row
+    h4 Build times:
+    line-plot(data="successful_builds", xattr="started_at", yattr="duration", xunit="timestamp", yunit="seconds", width=800, height=200)
+  .row
     h4 Buildrequests:
     span(ng-hide='buildrequests.length>0')
       | None
