--- a/www/base/src/app/builders/builder/builder.tpl.jade
+++ b/www/base/src/app/builders/builder/builder.tpl.jade
@@ -2,29 +2,30 @@
   .row(ng-show='builder.description')
     h4 Description:
     | {{ builder.description }}
-  .row
-    h4 Build times:
-    line-plot(data="successful_builds", xattr="started_at", yattr="duration", xunit="timestamp", yunit="seconds", width=800, height=200)
-  .row
-    h4 Buildrequests:
-    span(ng-hide='buildrequests.length>0')
-      | None
-    table.table.table-hover.table-striped.table-condensed(ng-show='buildrequests.length>0')
-      tr
-        td(width='100px') #
-        td(width='150px') Submitted At
-        td(width='150px') Owner
-        td Properties
-      tr(ng-repeat='br in buildrequests | orderBy:"-submitted_at"', ng-if="br.claimed==false" )
-          td
-            a(ui-sref="buildrequest({buildrequest:br.buildrequestid})")
-              span.badge-status {{br.buildrequestid}}
-          td
-            span(title="{{br.submitted_at | dateformat:'LLL'}}")
-              | {{br.submitted_at | timeago }}
-          td
-            span {{br.properties.owner[0]}}
-          td
+  uib-tabset
+      uib-tab(heading="Build requests")
+        span(ng-hide='buildrequests.length>0')
+          | None
+        table.table.table-hover.table-striped.table-condensed(ng-show='buildrequests.length>0')
+          tr
+            td(width='100px') #
+            td(width='150px') Submitted At
+            td(width='150px') Owner
+            td Properties
+          tr(ng-repeat='br in buildrequests | orderBy:"-submitted_at"', ng-if="br.claimed==false" )
+              td
+                a(ui-sref="buildrequest({buildrequest:br.buildrequestid})")
+                  span.badge-status {{br.buildrequestid}}
+              td
+                span(title="{{br.submitted_at | dateformat:'LLL'}}")
+                  | {{br.submitted_at | timeago }}
+              td
+                span {{br.properties.owner[0]}}
+              td
+      uib-tab(heading="Build times")
+        line-plot(data="successful_builds", xattr="started_at", yattr="duration", xunit="timestamp", yunit="seconds", width=800, height=200)
+      uib-tab(heading="Success Rate")
+        line-plot(data="success_ratio", xattr="date", yattr="success_ratio", xunit="timestamp", yunit="percent", width=800, height=200)
   builds-table(builder="builder", builds="builds")
   a.btn.btn-default(ui-sref='builder({builder: builder.builderid, numbuilds: numbuilds + 100})', ng-if="builds.length>=numbuilds")
       | more
