www/react: Extract loading indicator component to buildbot-ui package

--- a/www/react-ui/src/components/LoadingIndicator/LoadingIndicator.scss
+++ b/www/react-ui/src/components/LoadingIndicator/LoadingIndicator.scss
@@ -1,14 +1,14 @@
 
-.bb-grid-load-indicator {
+.bb-load-indicator {
   width: 100%;
   height: 100%;
 }
 
-.bb-grid-load-indicator > * {
+.bb-load-indicator > * {
   text-align: center;
 }
 
-.bb-grid-load-indicator svg {
+.bb-load-indicator svg {
   width: 2em;
   height: 2em;
 }
