www: Highlight current search result in LogTextViewer

--- a/www/react-base/src/components/LogViewer/LogViewerText.scss
+++ b/www/react-base/src/components/LogViewer/LogViewerText.scss
@@ -87,6 +87,10 @@
   color: black;
 }
 
+.bb-logviewer-result.bb-logviewer-result-current {
+  background-color: yellow;
+}
+
 .bb-logviewer-result-begin {
   border-top-left-radius: 0.3rem;
   border-bottom-left-radius: 0.3rem;
