--- a/www/base/src/app/builders/builder/builder.tpl.jade
+++ b/www/base/src/app/builders/builder/builder.tpl.jade
@@ -9,13 +9,16 @@
         table.table.table-hover.table-striped.table-condensed(ng-show='buildrequests.length>0')
           tr
             td(width='100px') #
+            td(width='100px') Priority
             td(width='150px') Submitted At
             td(width='150px') Owners
             td Properties
-          tr(ng-repeat='br in buildrequests | orderBy:"-submitted_at"', ng-if="br.claimed==false" )
+          tr(ng-repeat='br in buildrequests | orderBy:["-priority","-submitted_at"]', ng-if="br.claimed==false" )
               td
                 a(ui-sref="buildrequest({buildrequest:br.buildrequestid})")
                   span.badge-status {{br.buildrequestid}}
+              td
+                span {{br.priority}}
               td
                 span(title="{{br.submitted_at | dateformat:'LLL'}}")
                   | {{br.submitted_at | timeago }}
