www: Extract sidebar title text color to themeable CSS variable

--- a/www/react-base/src/components/PageWithSidebar/PageWithSidebar.scss
+++ b/www/react-base/src/components/PageWithSidebar/PageWithSidebar.scss
@@ -30,7 +30,7 @@ $gl-sidebar-width: 600px;
       background: var(--bb-sidebar-button-hover-background-color);
     }
     ul .sidebar-title {
-      color: #627cb7;
+      color: var(--bb-sidebar-title-text-color);
     }
   }
   &.active:not(.pinned) .sidebar{
