--- a/www/react-base/src/components/LogDownloadButtons/LogDownloadButtons.scss
+++ b/www/react-base/src/components/LogDownloadButtons/LogDownloadButtons.scss
@@ -2,5 +2,6 @@
 .bb-log-download-button.btn {
   // This fixes wrong vertical alignment in relation to other elements if the download button is part of the text
   // line with other content.
+  display: inline;
   vertical-align: top;
 }
