www/react: Add UI for regex search in logs

--- a/www/react-base/src/components/LogSearchField/LogSearchField.scss
+++ b/www/react-base/src/components/LogSearchField/LogSearchField.scss
@@ -50,6 +50,10 @@
   margin-left: 1.75rem;
 }
 
+.bb-log-search-field-options-regex {
+  margin-left: 2.75rem;
+}
+
 .bb-log-search-field-nav-button {
   border-radius: 0.25rem;
   border: 0px solid transparent;
@@ -66,7 +70,7 @@
 
 .bb-log-search-field-text {
   width: 100%;
-  padding: 0.375rem 0.75rem 0.375rem 3rem;
+  padding: 0.375rem 0.75rem 0.375rem 4rem;
   border-radius: 0.25rem;
   overflow: visible;
 }
