--- a/www/react-base/src/components/BuildSummary/BuildSummary.scss
+++ b/www/react-base/src/components/BuildSummary/BuildSummary.scss
@@ -38,6 +38,10 @@
 .bb-build-summary-step-line {
   position:relative;
 
+  .bb-build-summary-step-label {
+    display: inline-block;
+  }
+
   &.list-group-item.bb-anchor-target {
     border: 2px solid #ffff00;
   }
