www: Reduce padding in cards in HomeView

--- a/www/react-base/src/views/HomeView/HomeView.scss
+++ b/www/react-base/src/views/HomeView/HomeView.scss
@@ -8,6 +8,10 @@
     padding: 10px 15px;
   }
 
+  .card-body {
+    padding: 0.5rem;
+  }
+
   .bb-home-builder-card {
     border-color: #337ab7;
   }
