www: Reduce padding in build steps lists

--- a/www/react-base/src/components/BuildRequestSummary/BuildRequestSummary.scss
+++ b/www/react-base/src/components/BuildRequestSummary/BuildRequestSummary.scss
@@ -1,6 +1,6 @@
 .bb-build-request-summary {
-  margin-left: 30px;
-  margin-top: 8px;
+  margin-left: 2rem;
+  margin-top: 0.3rem;
 }
 
 .bb-build-request-summary-pending-panel {
