www: Hook old-named react frontend to existing codebase

--- a/www/react-base/src/styles/colors.scss
+++ b/www/react-base/src/styles/colors.scss
@@ -1,6 +1,6 @@
 /* This file contain meaningful coloring for status stuff (logs, status values) */
 
-@import "../../../react-ui/dist/colors.scss";
+@import "../../../ui/dist/colors.scss";
 
 /* logs coloring
     this theme is based the iterm2 default theme
