www: Preserve navigation link as one line on narrow window

--- a/www/base/src/components/Topbar/Topbar.scss
+++ b/www/base/src/components/Topbar/Topbar.scss
@@ -69,6 +69,11 @@ $gl-sidebar-small-threshold: 600px;
   }
 }
 
+div.bb-topbar-navbar-elements {
+  display: flex;
+  flex-direction: row;
+}
+
 // Align navbar with sidebar
 .navbar {
   padding-bottom: 0;
