www: Fix wrong buildbot-ui imports

--- a/www/base/src/styles/colors.scss
+++ b/www/base/src/styles/colors.scss
@@ -1,6 +1,6 @@
 /* This file contain meaningful coloring for status stuff (logs, status values) */
 
-@import "../../../ui/dist/colors.scss";
+@import "buildbot-ui/colors.scss";
 
 /* logs coloring
     this theme is based the iterm2 default theme
