--- a/www/base/src/components/PageWithSidebar/PageWithSidebar.scss
+++ b/www/base/src/components/PageWithSidebar/PageWithSidebar.scss
@@ -22,16 +22,14 @@ $gl-sidebar-width: 600px;
       background: var(--bb-sidebar-footer-background-color);
     }
     li.current {
-      a, button {
+      .bb-sidebar-item {
         background: var(--bb-sidebar-button-current-background-color);
       }
-      a:hover,
-      button:hover {
+      .bb-sidebar-button:hover {
         background: var(--bb-sidebar-button-hover-background-color);
       }
     }
-    a:hover,
-    button:hover {
+    .bb-sidebar-button:hover {
       background: var(--bb-sidebar-button-hover-background-color);
     }
     ul .sidebar-title {
@@ -61,8 +59,7 @@ $gl-sidebar-width: 600px;
         display: block;
         margin: 13px 0;
       }
-      .sidebar-list a:hover span,
-      .sidebar-list button:hover span{
+      .sidebar-list .bb-sidebar-button:hover span{
         border-left: 3px solid #e99d1a;
         text-indent: 22px;
       }
@@ -123,8 +120,7 @@ $gl-sidebar-width: 600px;
         text-align: left;
       }
 
-      li a,
-      li button {
+      li .bb-sidebar-item {
         color: var(--bb-sidebar-header-text-color);
         display: block;
         text-decoration: none;
@@ -135,7 +131,7 @@ $gl-sidebar-width: 600px;
       }
       li.sidebar-main {
         height: 51px;
-        a, button {
+        .bb-sidebar-item {
           font-size: 18px;
           line-height: 50px;
         }
@@ -157,7 +153,7 @@ $gl-sidebar-width: 600px;
       }
       li.sidebar-list {
         height: 40px;
-        a, button {
+        .bb-sidebar-item {
           padding: 0;
           text-indent: 25px;
           font-size: 15px;
@@ -168,7 +164,7 @@ $gl-sidebar-width: 600px;
           }
         }
         &.current {
-          a, button {
+          .bb-sidebar-item {
             color: var(--bb-sidebar-button-current-text-color);
             border-left: 3px solid var(--bb-sidebar-stripe-current-color);
             text-indent: 22px;
@@ -177,8 +173,7 @@ $gl-sidebar-width: 600px;
             text-indent: 25px;
           }
         }
-        a:hover,
-        button:hover {
+        .bb-sidebar-button:hover {
           color: var(--bb-sidebar-button-hover-text-color);
           border-left: 3px solid var(--bb-sidebar-stripe-hover-color);
           text-indent: 22px;
@@ -192,19 +187,18 @@ $gl-sidebar-width: 600px;
             width: 50px;
           }
         }
-        a:hover .menu-icon,
-        button:hover .menu-icon {
+        .bb-sidebar-button:hover .menu-icon {
           text-indent: 25px;
         }
         &.subitem {
           transition: height $gl-sidebar-transition-time ease-out 0s;
-          a, button {
+          .bb-sidebar-item {
             padding-left:20px;
             transition: line-height $gl-sidebar-transition-time ease-out 0s, color $gl-sidebar-transition-time ease-out 0s,  background $gl-sidebar-transition-time ease-out 0s;;
           }
           &:not(.active) {
             height: 0px;
-            a, button {
+            .bb-sidebar-item {
               line-height: 0px;
               color: rgba(255, 0, 0, 0.0);
             }
@@ -229,14 +223,12 @@ $gl-sidebar-width: 600px;
       border: 0;
     }
 
-    div a,
-    div button {
+    div .bb-sidebar-item {
       color: #b2bfdc;
       font-size: 12px;
       line-height: 43px;
     }
-    div a:hover,
-    div button:hover {
+    div .bb-sidebar-button:hover {
       color: #ffffff;
       text-decoration: none;
     }
